# stock-portfolio-analysis

./: app.py  pyproject.toml  requirements.txt
