[project]
name = "stock-portfolio-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "empyrical-reloaded>=0.5.12",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "yfinance>=1.0",
]
